# rtt_mcp

./: .env.example  .gitignore  README.md  install.ps1  install.sh  pyproject.toml
go/: .gitignore  README.md  go.mod  go.sum  main.go
go/internal/config/: config.go
go/internal/jlink/: api.go  backend.go  dynload.go  dynload_unix.go  dynload_windows.go  iface.go  mock.go
go/internal/rttcore/: core.go  log.go  ring.go
go/internal/tools/: tools.go
go/internal/transport/: bridge.go  daemon.go  spawn.go  spawn_unix.go  spawn_windows.go  stdio.go
src/mcp_rtt_server/: __init__.py  __main__.py  bridge.py  http_server.py  jlink_rtt.py  server.py  tools.py
vscode-rtt-mcp/: .gitignore  .vscodeignore  README.md  build.sh  package-lock.json  package.json  tsconfig.json
vscode-rtt-mcp/src/: extension.ts  logTail.ts  mcpClient.ts  rttProvider.ts
vscode-rtt-mcp/test/: diag.js  integration.test.js  mock_server.py
