[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-rtt-server"
version = "0.1.0"
description = "MCP Server for Segger RTT via J-Link"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name" }
]
dependencies = [
    "mcp>=1.0.0",
    "pylink-square>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_rtt_server"]

[tool.ruff]
line-length = 100
target-version = "py310"
