[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-rtt-server"
version = "0.1.0"
description = "MCP Server for Segger RTT via J-Link"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "ForeverJin" }
]
dependencies = [
    # Core MCP SDK. The SSE transport (http_server.py / bridge.py) imports uvicorn,
    # starlette and httpx-sse; recent `mcp` releases pull these in transitively,
    # but we declare them explicitly with minimums so the SSE server is installable
    # and pinned even if mcp ever makes them optional extras.
    "mcp>=1.2.0",
    "uvicorn>=0.31.1; sys_platform != 'emscripten'",
    "starlette>=0.37.0",
    "httpx-sse>=0.4.0",
    "pylink-square>=0.14.0",
]

[project.scripts]
# After `pip install`, these commands land on PATH so Claude Code / the VSCode
# extension can launch the tool by name — no absolute python path, no project cwd.
rtt-mcp-server = "mcp_rtt_server.server:cli"     # stdio server (Claude Code entry)
rtt-mcp-daemon = "mcp_rtt_server.http_server:main"  # SSE daemon (single J-Link owner)
rtt-mcp-bridge = "mcp_rtt_server.bridge:cli"     # stdio<->SSE bridge (extension)

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_rtt_server"]

[tool.ruff]
line-length = 100
target-version = "py310"
